controllers/user/config/internal-user-approval-adapter/namespace.yaml
# Copyright 2026 labring.
apiVersion: v1
kind: Namespace
metadata:
  name: internal-credential-approval
