controllers/user/config/internal-user-approval-adapter/service.yaml
# Copyright 2026 labring.
apiVersion: v1
kind: Service
metadata:
  name: internal-credential-approval-adapter
  namespace: internal-credential-approval
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
    targetPort: https
  selector:
    app.kubernetes.io/name: internal-credential-approval-adapter
